src/components/generic/StatusCircle.scss
@import "/src/assets/scss/mixins";

div.status-circle {
    cursor: help;
}

div.status-circle-body {
    background-color: var(--theme-secondary);
    border-radius: 100%;
    z-index: 2;
    position: relative;
    user-select: none;
    pointer-events: none;
}

div.status-circle-pulse {
    background-color: var(--theme-secondary);
    z-index: 1;
    border-radius: 100%;
    position: absolute;
    user-select: none;
    pointer-events: none;
    animation: pulse 1s infinite;
}

@keyframes pulse {
    0% {
        transform: scale(0);
        opacity: 1;
    }
    100% {
        transform: scale(1);
        opacity: 0;
    }
}

/** Size Variants **/
div.status-circle-size-small {
    div.status-circle-body {
        width: 12px;
        height: 12px;
    }

    div.status-circle-pulse {
        width: 32px;
        height: 32px;
        top: -10px;
        left: -10px;
    }

    div.status-circle-tooltip {
        width: 160px;
        transform: translate(calc(-50% + 6px), calc(-100% - 10px));
    }
}

div.status-circle-size-default {
    div.status-circle-body {
        width: 16px;
        height: 16px;
    }

    div.status-circle-pulse {
        width: 40px;
        height: 40px;
        top: -12px;
        left: -12px;
    }

    div.status-circle-tooltip {
        width: 220px;
        transform: translate(calc(-50% + 8px), calc(-100% - 10px));
    }
}

/** Color Variants **/
div.status-circle-variant-available {
    div.status-circle-body, div.status-circle-pulse {
        background-color: var(--theme-primary);
    }
}

div.status-circle-variant-busy {
    div.status-circle-body {
        background-color: var(--theme-danger);
    }
}

div.status-circle-variant-unavailable {
    div.status-circle-body {
        background-color: var(--theme-secondary);
    }

    div.status-circle-pulse {
        display: none;
    }
}

